Fix bubble z-index

--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ input:-webkit-autofill:focus {
     height: 100vh;
     left: 0px;
     top: 0px;
-    z-index: -1;
+    z-index: 1;
 }
 
 .full-height {
